adding test for updating beer